fixed all overflow mobile version

--- a/src/app/main/contact/contact.component.scss
+++ b/src/app/main/contact/contact.component.scss
@@ -303,3 +303,22 @@ form {
         top: -0.375rem;
     }
 }
+
+@media (min-width: 390px) and (max-width: 1440px) {
+    main {
+        padding: 0 1.3125rem;
+    }
+    
+    h2 {
+        font-size: 2.8125rem;
+        letter-spacing: 0.02813rem;
+    }
+
+    form {
+        >.field input,
+        .field textarea {
+            width: calc(18.125rem - 8px);
+            padding: 0.9375rem 1.5625rem;
+        }
+    }
+}
