--- a/src/app/main/my-skills/my-skills.component.scss
+++ b/src/app/main/my-skills/my-skills.component.scss
@@ -13,6 +13,7 @@ main {
         padding: calc(10.0625rem - 4px) calc(5.375rem - 4px) calc(8.34rem - 4px) calc(8.8125rem - 4px);
         justify-content: space-between;
         align-items: center;
+        justify-content: center;
         flex-wrap: wrap;
         border: 4px solid $black;
         column-gap: 7rem;
@@ -123,5 +124,16 @@ h2 {
     h2 {
         font-size: 2.8125rem;
         letter-spacing: 0.02813rem;
+    }
+
+    .skill {
+        width: 5.35663rem;
+        >div {
+            height: 3.75rem;
+
+            >img {
+                height: 3.75rem;
+            }
+        }
     }
 }
