--- a/src/app/main/portfolio/project/project.component.scss
+++ b/src/app/main/portfolio/project/project.component.scss
@@ -30,14 +30,17 @@ main {
             >img {
                 filter: grayscale(0);
             }
+
             >div {
                 opacity: 1;
                 margin: 1.25rem 0 0 1.25rem;
+
                 >img {
                     animation: 150ms linear awake forwards;
                 }
             }
         }
+
         .description {
             opacity: 1;
             transform: translateX(0);
@@ -102,9 +105,12 @@ main {
 }
 
 .backwards {
+    flex-direction: row-reverse;
+
     >.thumbnail {
         >div {
             justify-content: flex-start !important;
+
             >img {
                 margin-left: calc(-1.5rem - 2px);
             }
@@ -119,6 +125,7 @@ main {
         .thumbnail {
             >div {
                 margin: 1.25rem 1.25rem 0 -1.25rem !important;
+
                 >img {
                     animation: 150ms linear awakeBackwards forwards !important;
                 }
@@ -193,5 +200,38 @@ main {
         width: 4.73138rem;
         height: 4.73138rem;
         margin-right: calc(-2.36569rem - 2px);
+    }
+}
+
+@media (min-width: 390px) and (max-width: 1440px) {
+    main {
+        width: 21.25rem;
+        height: 31.875rem;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column-reverse;
+    }
+
+    .backwards {
+        flex-direction: column-reverse;
+
+        .description {
+            transform: translateY(38.6875rem);
+        }
+    }
+
+    .description {
+        width: 100%;
+    }
+
+    .thumbnail {
+        >img {
+            width: 19.75rem;
+            height: 12.5rem;
+        }
+        >div {
+            width: calc(19.75rem - 8px);
+            height: calc(12.5rem - 8px);
+        }
     }
 }
