--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -74,7 +74,27 @@ main {
 
 @media (min-width: 390px) and (max-width: 1440px) {
     main {
-        width: 100%;
-        padding: 1.875rem 1.5625rem;
+        width: calc(100% - 1.375rem - 1.375rem);
+        padding: 1.875rem 1.375rem 2.375rem 1.375rem;
+        align-items: center;
+
+        >div:not(.link) {
+            flex-direction: column-reverse;
+            height: auto;
+            margin-bottom: 0.5625rem;
+            gap: 1.75rem;
+
+            >div:not(.socials) {
+                align-items: center;
+                gap: 1.75rem;
+
+                >span {
+                    font-family: Overpass;
+                    font-weight: 300;
+                    line-height: 100%;
+                    letter-spacing: -0.03594rem;
+                }
+            }
+        }
     }
 }
