--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -105,6 +105,7 @@ footer {
                 display: flex;
                 align-items: flex-end;
                 gap: 0.5rem;
+
                 >span {
                     font-size: 1.4375rem;
                     font-weight: 300;
@@ -114,6 +115,7 @@ footer {
                     align-items: center;
                     margin-bottom: -0.25rem;
                 }
+
                 >img {
                     width: 1.5rem;
                     padding: 0.375rem 0.375rem 0 0.375rem;
@@ -234,5 +236,40 @@ footer {
         width: 15.25rem;
         left: unset;
         right: 0;
+    }
+}
+
+@media (min-width: 390px) and (max-width: 1440px) {
+
+
+    .section {
+        width: 17.36525rem;
+        height: 5rem;
+
+        >h1 {
+            font-size: 2.8125rem;
+            letter-spacing: -0.07031rem;
+        }
+    }
+
+    .my-skills-de {
+        font-size: 2.578125rem !important;
+    }
+
+    footer {
+        width: 100%;
+
+        >div {
+            width: calc(100% - 1.25rem - 1.5625rem);
+            height: calc(100% - 3.625rem);
+            padding: 0 1.25rem 3.625rem 1.5625rem;
+            >h2 {
+                font-size: 2.8125rem;
+                letter-spacing: 0.02813rem;
+            }
+            >div {
+                flex-direction: column;
+            }
+        }
     }
 }
